adds background image on homepage

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,10 @@ body{
   font-family: 'Advent Pro', sans-serif;
 }
 #home{
-
+  background-image: url("../assets/backgrounds/landing.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  border: 1px dashed blue;
 }
 #about{
 
