--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,24 @@
 body{
   font-family: 'Advent Pro', sans-serif;
 }
+.{
+  box-sizing: border-box;
+}
 #home{
   background-image: url("../assets/backgrounds/landing.jpg");
   background-size: cover;
   background-repeat: no-repeat;
+}
+.logo{
+  padding-top: 10.5%;
+  padding-bottom: 10%;
+  text-align: center;
+  color: #ffffff;
+}
+.logoBig{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 #about{
 
