--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ div.logo img{
 #about{
 
 }
-.happy, .breakfast, .lunch, .dinner{
+.breakfast, .lunch, .dinner{
   /*border: 1px dashed orange;*/
   text-align: center;
   padding: 80px;
@@ -38,9 +38,25 @@ img{
   opacity: 0.7;
   color: black;
 }
-.happy{
-
+.happyHour:hover{
+  color: black;
 }
+.happy{
+  padding: 0;
+  margin: 0;
+}
+  .happyHour{
+    text-align: center;
+    color: #F15A29;
+    padding-top: 25.75px;
+    padding-bottom: 25.75px;
+  }
+  .partyTime{
+    text-align: center;
+    padding-top: 25.75px;
+    padding-bottom: 25.75px;
+    background-color: #F15A29;
+  }
 .breakfast{
   background-image: url("../assets/foodtop/breakfast.jpg");
   background-size: cover;
