--- a/css/style.css
+++ b/css/style.css
@@ -31,9 +31,6 @@ div.logo img{
   text-align: center;
   padding: 80px;
 }
-img{
-
-}
 .offer:hover{
   opacity: 0.7;
   color: black;
@@ -77,13 +74,13 @@ img{
 }
 .wrapper{
   margin-top: 20px;
-  border: 1px dashed orange;
 }
 button{
   padding: 15px 32px;
   background-color: #ffffff;
   color: #F15A29;
   border: 1px solid #F15A29;
+  border-radius: 5%;
   cursor: pointer;
 }
 /*for fast foods*/
@@ -94,7 +91,6 @@ button{
   float: right !important;
   display: block;
   padding: 15px;
-  border: 1px dashed orange;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 8px 16px rgba(0,0,0,0.24);
 }
 div.fastFoodsFrame img{
@@ -102,7 +98,7 @@ div.fastFoodsFrame img{
 }
 
 .fastFoodsTextFrame{
-  border: 1px dashed orange;
+
 }
 .fastFoodsTxt{
 
@@ -110,21 +106,22 @@ div.fastFoodsFrame img{
 /*for drinks*/
 div.drinksFrame img{
   margin: 0;
+  padding: 0;
 }
 .drinksTextFrame{
-  border: 1px dashed orange;
+
 }
 .drinksTxt{
-
+  float: right !important;
+  text-align: right;
 }
 .drinksImage{
 
 }
 .drinksFrame{
   float: left !important;
-  display: inline-block;
+  display: inline;
   padding: 15px;
-  border: 1px dashed orange;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 8px 16px rgba(0,0,0,0.24);
 }
 
