--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ li{
   background-image: url("../assets/backgrounds/landing.jpg");
   background-size: cover;
   background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 .logo{
   padding-top: 10.5%;
@@ -134,14 +135,42 @@ div.drinksFrame img{
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 8px 16px rgba(0,0,0,0.24);
 }
 #menu{
-  /*background-image: url("../assets/backgrounds/foodsBg.jpg");*/
-  /*background-repeat: no-repeat;*/
+  background-image: url("../assets/backgrounds/foodsBg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  height: 500px;
 }
 .thisMenu{
-  border: 1px dashed orange;
+
+}
+.menuNav{
+  margin-top: 5%;
+  float: none !important;
+  margin: 0 auto;
+}
+#contacts{
+
+}
+.comments{
+  /*border: 1px dashed orange;*/
+  float: none !important;
+  margin: 0 auto;
+  height: 100px;
+  padding: 10px;
 }
 
-#contacts{
+.happyCustomers{
+  text-align: center;
+  float: none !important;
+  margin: 0 auto;
+  /*border: 1px dashed orange;*/
+  height: 100px;
+}
+.georgeRichard{
+
+}
+.aboutMenu{
 
 }
 .contacts{
